--- a/scss/_custom-variables.scss
+++ b/scss/_custom-variables.scss
@@ -9,14 +9,14 @@
 //$enable-gradients: true;
 
 // Changing the body background and text
-//$body-bg: #d3e9eb;
-//$body-color: #151417;
+$body-bg: #f8f8f8;
+$body-color: #0c0c0c;
 
 // Changing the border radius of buttons
 //$border-radius: 15px;
 
 // Changing the theme colors
-//$primary: #202f41;
+$primary: #64b671;
 //$secondary: #436296;
 //$success: #2bc550;
 //$info: #495dff;
@@ -30,3 +30,11 @@
 //$theme-colors: (
 //  "cool": #4d3fa3
 //);
+$font-family-sans-serif: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+$font-family-base: $font-family-sans-serif;
+
+// stylelint-disable value-keyword-case
+$font-family-sans-serif:      'Open Sans', "Helvetica Neue", Arial, sans-serif !default;
+$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-base:            $font-family-sans-serif !default;
+// stylelint-enable value-keyword-case
