--- a/scss/_custom-styles.scss
+++ b/scss/_custom-styles.scss
@@ -16,3 +16,13 @@
   background-color: $primary;
   color: $white;
 }
+
+.bs-docs-section {
+  margin-bottom: 4rem;
+}
+
+.page-header {
+  h1 {
+    padding: 2rem 0;
+  }
+}
