--- a/scss/_custom-variables.scss
+++ b/scss/_custom-variables.scss
@@ -1,40 +1,115 @@
-// Overwrite Bootstrap's variables here
-// You can find them in node_modules/bootstrap/scss/_variables.scss
-// Copy the variables you need into this file, don't modify files under node_modules/
+$white:    #fff !default;
+$gray-100: #f8f9fa !default;
+$gray-200: #f7f7f9 !default;
+$gray-300: #eceeef !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #919aa1 !default;
+$gray-700: #55595c !default;
+$gray-800: #343a40 !default;
+$gray-900: #1a1a1a !default;
+$black:    #000 !default;
 
-// Some example variables that you can uncomment:
+$blue:    #007bff !default;
+$indigo:  #6610f2 !default;
+$purple:  #6f42c1 !default;
+$pink:    #e83e8c !default;
+$red:     #d9534f !default;
+$orange:  #fd7e14 !default;
+$yellow:  #f0ad4e !default;
+$green:   #4BBF73 !default;
+$teal:    #20c997 !default;
+$cyan:    #1F9BCF !default;
 
-// Enabling shadows and gradients
-//$enable-shadows: true;
-//$enable-gradients: true;
+$primary:       $gray-900 !default;
+$secondary:     $white !default;
+$success:       $green !default;
+$info:          $cyan !default;
+$warning:       $yellow !default;
+$danger:        $red !default;
+$light:         $white !default;
+$dark:          $gray-800 !default;
 
-// Changing the body background and text
-$body-bg: #f8f8f8;
-$body-color: #0c0c0c;
+$yiq-contrasted-threshold:  185 !default;
 
-// Changing the border radius of buttons
-//$border-radius: 15px;
+// Body
 
-// Changing the theme colors
-$primary: #64b671;
-//$secondary: #436296;
-//$success: #2bc550;
-//$info: #495dff;
-//$warning: #ef8143;
-//$danger: #ff293a;
-//$light: #dfe6ee;
-//$dark: #0f1319;
+$body-bg:                   $gray-100 !default;
+$body-color:                $gray-600 !default;
 
+// Components
 
-// Adding (!) an additional theme color (ex. classes btn-cool, bg-cool)
-//$theme-colors: (
-//  "cool": #4d3fa3
-//);
-$font-family-sans-serif: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
-$font-family-base: $font-family-sans-serif;
+$border-radius:               0 !default;
+$border-radius-lg:            0 !default;
+$border-radius-sm:            0 !default;
 
-// stylelint-disable value-keyword-case
-$font-family-sans-serif:      'Open Sans', "Helvetica Neue", Arial, sans-serif !default;
-$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
-$font-family-base:            $font-family-sans-serif !default;
-// stylelint-enable value-keyword-case
+// Fonts
+
+$font-family-sans-serif:      "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-title:      "Merriweather", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+
+$font-size-base:              0.875rem !default;
+
+$h1-font-size:                2rem !default;
+$h2-font-size:                1.75rem !default;
+$h3-font-size:                1.5rem !default;
+$h4-font-size:                1.25rem !default;
+$h5-font-size:                1rem !default;
+$h6-font-size:                0.75rem !default;
+
+$headings-font-weight:        600 !default;
+$headings-color:              $gray-900 !default;
+
+// Tables
+
+$table-border-color:          rgba(0, 0, 0, 0.05) !default;
+
+// Buttons + Forms
+
+$input-btn-border-width:      0 !default;
+
+// Buttons
+
+$btn-line-height:             1.5rem !default;
+
+$input-btn-padding-y:         0.75rem !default;
+$input-btn-padding-x:         2rem !default;
+
+$input-btn-padding-y-sm:      .5rem !default;
+$input-btn-padding-x-sm:      1rem !default;
+
+$input-btn-padding-y-lg:      2rem !default;
+$input-btn-padding-x-lg:      3rem !default;
+
+$btn-font-weight:             600 !default;
+
+// Forms
+
+$input-line-height:                     1.5rem !default;
+
+$input-bg:                              $gray-200 !default;
+$input-disabled-bg:                     $gray-300 !default;
+
+$input-group-addon-bg:                  $gray-300 !default;
+
+// Navbar
+
+$navbar-padding-y:                  1.5rem !default;
+
+$navbar-dark-hover-color:           $white !default;
+
+$navbar-light-color:                rgba($black,.3) !default;
+$navbar-light-hover-color:          $gray-900 !default;
+$navbar-light-active-color:         $gray-900 !default;
+
+// Pagination
+
+$pagination-border-color:           transparent !default;
+
+$pagination-hover-border-color:     $pagination-border-color !default;
+
+$pagination-disabled-border-color:  $pagination-border-color !default;
+
+// Breadcrumbs
+
+$breadcrumb-bg:                     transparent !default;
